<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:padding="@dimen/_9sdp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/cvMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvDialogTitle"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">





                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/rate_us"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold"
                    android:textColor="@color/black"

                    />

                <TextView
                    android:id="@+id/tvDialogDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTintMode="screen"
                    android:gravity="start"
                    android:text="@string/text_feedback_message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


                ivRateUsTop


                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:orientation="horizontal">-->


                <!--                    <ImageView-->
                <!--                        android:id="@+id/arrow"-->
                <!--                        android:layout_width="@dimen/_50sdp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_marginLeft="@dimen/_140sdp"-->
                <!--                        android:src="@drawable/arrow" />-->


                <!--                    <ImageView-->
                <!--                        android:id="@+id/arrowpart"-->
                <!--                        android:layout_width="@dimen/_8sdp"-->
                <!--                        android:layout_height="@dimen/_8sdp"-->
                <!--                        android:layout_gravity="bottom"-->
                <!--                        android:layout_marginLeft="@dimen/_15sdp"-->
                <!--                        android:src="@drawable/arrowpart" />-->


                <!--                </LinearLayout>-->

                <ImageView
                    android:id="@+id/ivRateUsTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:maxHeight="@dimen/_180sdp"
                    android:padding="@dimen/_15sdp"
                    android:src="@drawable/ic_ratting"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.53"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.example.pdfreaderrr.utills.CustomRatingView
                    android:id="@+id/customRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintBottom_toTopOf="@+id/tvCancel"
                    app:layout_constraintEnd_toEndOf="@+id/rateustxt"
                    app:layout_constraintStart_toStartOf="@+id/rateustxt"
                    app:layout_constraintTop_toBottomOf="@+id/rateustxt"
                    app:padding="@dimen/_8sdp"
                    app:currentStar="0"
                    app:starHeight="@dimen/_25sdp"
                    app:starWidth="@dimen/_25sdp" />

                <!--            <findmyphone.whistleapp.phonefinder.phonetracker.CustomRatingView-->
                <!--                android:id="@+id/customRatingBar"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_gravity="center"-->
                <!--                android:layout_marginTop="24dp"-->
                <!--                android:layout_marginBottom="16dp"-->
                <!--                app:currentStar="0"-->
                <!--                app:layout_constraintBottom_toTopOf="@+id/tvCancel"-->
                <!--                app:layout_constraintEnd_toEndOf="@+id/rateustxt"-->
                <!--                app:layout_constraintStart_toStartOf="@+id/rateustxt"-->
                <!--                app:layout_constraintTop_toBottomOf="@+id/rateustxt"-->
                <!--                app:padding="@dimen/_10sdp"-->
                <!--                app:starHeight="@dimen/_30sdp"-->
                <!--                app:starWidth="@dimen/_30sdp" />-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/exit"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_toLeftOf="@+id/later"
                        android:gravity="center_vertical"
                        android:text="@string/exit"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/later"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:gravity="center_vertical"
                        android:text="@string/later"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />


                </RelativeLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>