<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fileid"

        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filename"
            android:textColor="@color/purple_500"
            android:text="kjhkjghaj"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:textSize="@dimen/_13sdp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:textColor="@color/grey"
            android:text="filepath"
            android:id="@+id/filepath"/>




    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/print"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_6sdp"

                    android:src="@drawable/printer"
                    android:padding="@dimen/_4sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/Print"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>




        </androidx.appcompat.widget.LinearLayoutCompat>
    -->


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/fileid">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/share" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/gotopage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/share">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_staron" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Favourite"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"

            />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/greyscale"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gotopage">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_6sdp"
            android:src="@drawable/horizontal_and_vertical_view" />


        <TextView
            android:id="@+id/viewid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/verticalview"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/allignement"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greyscale">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:tint="@color/black" />


        <TextView
            android:id="@+id/mode_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/light_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>